[Agrim]FIX:Fixed some problems in Movies API
