# app/models/movie.rb
@@ -1,5 +1,6 @@
 class Movie < ApplicationRecord
   VALID_GENRES = %w[action horror comedy romance sci-fi].freeze
+  VALID_STREAMING_PLATFORMS = ['Netflix', 'Amazon Prime', 'Disney+'].freeze
 
   # Associations
   has_many :reviews, dependent: :destroy
@@ -9,20 +10,35 @@ class Movie < ApplicationRecord
   has_one_attached :poster
   has_one_attached :banner
 
-  # Validations
-  validates :title, presence: true
-  validates :genre, presence: true, inclusion: { in: VALID_GENRES }
-  validates :release_year, presence: true, numericality: { only_integer: true }, inclusion: { in: 1900..Time.current.year }
-  validates :rating, presence: true, numericality: { greater_than_or_equal_to: 0.0, less_than_or_equal_to: 10.0 }
-  validates :director, presence: true
-  validates :duration, presence: true, numericality: { only_integer: true, greater_than_or_equal_to: 30 }
-  validates :main_lead, presence: true
-  validates :description, presence: true, length: { maximum: 1000 }
-  validates :premium, inclusion: { in: [true, false] }
+  # Validations for Create
+  validates :title, presence: true, on: :create
+  validates :genre, presence: true, inclusion: { in: VALID_GENRES }, on: :create
+  validates :release_year, presence: true, numericality: { only_integer: true }, inclusion: { in: 1900..Time.current.year }, on: :create
+  validates :rating, presence: true, numericality: { greater_than_or_equal_to: 0.0, less_than_or_equal_to: 10.0 }, on: :create
+  validates :director, presence: true, on: :create
+  validates :duration, presence: true, numericality: { only_integer: true, greater_than_or_equal_to: 30 }, on: :create
+  validates :main_lead, presence: true, on: :create
+  validates :streaming_platform, presence: true, inclusion: { in: VALID_STREAMING_PLATFORMS }, on: :create
+  validates :description, presence: true, length: { maximum: 1000 }, on: :create
+  validates :premium, inclusion: { in: [true, false] }, on: :create
 
-  # Custom validation for attachments
-  validates :poster, attached: true, content_type: ['image/png', 'image/jpg', 'image/jpeg'], size: { less_than: 5.megabytes }
-  validates :banner, attached: true, content_type: ['image/png', 'image/jpg', 'image/jpeg'], size: { less_than: 5.megabytes }
+  # Validations for Update
+  validates :title, length: { minimum: 1 }, allow_blank: true, on: :update
+  validates :genre, inclusion: { in: VALID_GENRES }, allow_blank: true, on: :update
+  validates :release_year, numericality: { only_integer: true }, inclusion: { in: 1900..Time.current.year }, allow_nil: true, on: :update
+  validates :rating, numericality: { greater_than_or_equal_to: 0.0, less_than_or_equal_to: 10.0 }, allow_nil: true, on: :update
+  validates :director, length: { minimum: 1 }, allow_blank: true, on: :update
+  validates :duration, numericality: { only_integer: true, greater_than_or_equal_to: 30 }, allow_nil: true, on: :update
+  validates :main_lead, length: { minimum: 1 }, allow_blank: true, on: :update
+  validates :streaming_platform, inclusion: { in: VALID_STREAMING_PLATFORMS }, allow_blank: true, on: :update
+  validates :description, length: { maximum: 1000 }, allow_blank: true, on: :update
+  validates :premium, inclusion: { in: [true, false] }, allow_nil: true, on: :update
+
+  # Attachment Validations
+  validates :poster, attached: true, content_type: ['image/png', 'image/jpg', 'image/jpeg'], size: { less_than: 5.megabytes }, on: :create
+  validates :banner, attached: true, content_type: ['image/png', 'image/jpg', 'image/jpeg'], size: { less_than: 5.megabytes }, on: :create
+  validates :poster, content_type: ['image/png', 'image/jpg', 'image/jpeg'], size: { less_than: 5.megabytes }, allow_blank: true, on: :update
+  validates :banner, content_type: ['image/png', 'image/jpg', 'image/jpeg'], size: { less_than: 5.megabytes }, allow_blank: true, on: :update
 
   # Custom validation for release_year
   validate :release_year_cannot_be_future
@@ -32,7 +48,7 @@ class Movie < ApplicationRecord
 
   # Ransack configuration
   def self.ransackable_attributes(auth_object = nil)
-    %w[title genre release_year rating director duration main_lead description premium]
+    %w[title genre release_year rating director duration main_lead streaming_platform description premium]
   end
 
   def self.search_and_filter(params)
@@ -51,6 +67,10 @@ class Movie < ApplicationRecord
 
   def banner_url
     banner.attached? ? banner.url : nil
+  end
+
+  def plan
+    premium? ? "premium" : "basic"
   end
 
   def self.create_movie(params)
