# swagger/v1/swagger.yaml
@@ -145,6 +145,14 @@ paths:
                           type: string
                         duration:
                           type: integer
+                        main_lead:
+                          type: string
+                        streaming_platform:
+                          type: string
+                          enum:
+                          - Netflix
+                          - Amazon Prime
+                          - Disney+
                         description:
                           type: string
                         plan:
@@ -166,6 +174,8 @@ paths:
                       - rating
                       - director
                       - duration
+                      - main_lead
+                      - streaming_platform
                       - description
                       - plan
                   total_pages:
@@ -190,8 +200,8 @@ paths:
           description: Movie created
         '422':
           description: Invalid request
-        '401':
-          description: Unauthorized
+        '403':
+          description: Forbidden
       requestBody:
         content:
           multipart/form-data:
@@ -211,6 +221,14 @@ paths:
                   type: string
                 duration:
                   type: integer
+                main_lead:
+                  type: string
+                streaming_platform:
+                  type: string
+                  enum:
+                  - Netflix
+                  - Amazon Prime
+                  - Disney+
                 description:
                   type: string
                 premium:
@@ -230,6 +248,8 @@ paths:
               - rating
               - director
               - duration
+              - main_lead
+              - streaming_platform
               - description
               - premium
   "/api/v1/movies/{id}":
@@ -265,6 +285,14 @@ paths:
                     type: string
                   duration:
                     type: integer
+                  main_lead:
+                    type: string
+                  streaming_platform:
+                    type: string
+                    enum:
+                    - Netflix
+                    - Amazon Prime
+                    - Disney+
                   description:
                     type: string
                   plan:
@@ -278,6 +306,18 @@ paths:
                   banner_url:
                     type: string
                     nullable: true
+                required:
+                - id
+                - title
+                - genre
+                - release_year
+                - rating
+                - director
+                - duration
+                - main_lead
+                - streaming_platform
+                - description
+                - plan
         '404':
           description: Movie not found
           content:
@@ -304,8 +344,10 @@ paths:
           description: Movie updated
         '422':
           description: Invalid request
-        '401':
-          description: Unauthorized
+        '403':
+          description: Forbidden
+        '404':
+          description: Not Found
       requestBody:
         content:
           multipart/form-data:
@@ -314,29 +356,49 @@ paths:
               properties:
                 title:
                   type: string
+                  nullable: true
                 genre:
                   type: string
+                  nullable: true
                 release_year:
                   type: integer
+                  nullable: true
                 rating:
                   type: number
                   format: float
+                  nullable: true
                 director:
                   type: string
+                  nullable: true
                 duration:
                   type: integer
+                  nullable: true
+                main_lead:
+                  type: string
+                  nullable: true
+                streaming_platform:
+                  type: string
+                  enum:
+                  - Netflix
+                  - Amazon Prime
+                  - Disney+
+                  nullable: true
                 description:
                   type: string
+                  nullable: true
                 premium:
                   type: boolean
+                  nullable: true
                 poster:
                   type: string
                   format: binary
                   description: Poster image file (e.g., JPEG, PNG)
+                  nullable: true
                 banner:
                   type: string
                   format: binary
                   description: Banner image file (e.g., JPEG, PNG)
+                  nullable: true
     delete:
       summary: Delete a movie
       tags:
@@ -354,8 +416,8 @@ paths:
           description: Movie deleted
         '404':
           description: Movie not found
-        '401':
-          description: Unauthorized
+        '403':
+          description: Forbidden
   "/api/v1/movies/{genre}":
     get:
       summary: List movies by genre
@@ -400,6 +462,14 @@ paths:
                           type: string
                         duration:
                           type: integer
+                        main_lead:
+                          type: string
+                        streaming_platform:
+                          type: string
+                          enum:
+                          - Netflix
+                          - Amazon Prime
+                          - Disney+
                         description:
                           type: string
                         plan:
@@ -421,6 +491,8 @@ paths:
                       - rating
                       - director
                       - duration
+                      - main_lead
+                      - streaming_platform
                       - description
                       - plan
                   total_pages:
